* Add tag reference to Layouts and Snippets [Jim Gay]
* Handle deploying to a sub-directory [Jim Gay]
* Ensure that generator specs actually test properly [Travis D. Warlick]
* Properly display errors on user password changes [Jim Gay]
* Prevent admin from removing her own admin privilege [Jim Gay]
* Move to Rails 2.3.5 [Jim Gay]
* Simplify admin tab API [Jim Gay, John Long, Sean Cribbs]

=== 0.9.0 RC1 (October 9, 2009)

* Turned on HAML's "ugly" whitespace mode in production [John Muhl]
* Use HTML 5 doctype. [John Muhl]
* Miscellaneous HTML standards improvements [John Muhl]
* Fixed bug where pages were being cached in dev mode. This has been a problem since switching to Rack::Cache. [Jason Garber]
* Snippets are now only accessible to people with the "Designer" role. [John Long]
* Renamed "Developer" role to "Designer". [John Long]
* Verify that the cache directory exists before trying to store a response. [Sean Cribbs]
* Fix page-part deletion in JS. [Sean Cribbs]
* Don't cache extension-defined javascripts, but do cache the defaults. [Sean Cribbs]
* Fix dev-site behavior when 'dev.host' is configured. [Chris Ricca]
* Concatenate admin javascript files. [John Muhl]
* Use more descriptive page titles. [John Muhl]
* Allow non-standard controller methods for render_region. [Jim Gay]
* Updated to use Radius 0.6.1. [John Long]
* Correct type on content-type and move to more/hide language. [John Long]
* Add some helpful shortcut keys. [Sean Cribbs]
* Implemented "Blade" user-interface. [John Long, Chris Parrish, Daniel Beach, Brandon Mathis, Sean Cribbs, Ben Morrow, John Muhl]

=== 0.8.2 Lustery

* Allow rake tasks to run if a higher version of Cucumber is installed [Jim Gay]

=== 0.8.1 Luster (September 5, 2009)

* Move default cache location to tmp. [Sean Cribbs]
* Upgrade Rails and dataset. [Sean Cribbs]
* Updated README and INSTALL. [John Long]
* Don't use Symbol#to_proc in initializer because ActiveSupport hasn't loaded yet.