@@ -19,6 +19,7 @@ core:
 * Daniel Beach
 * Chris Parrish
 * John Long
+* Anna billstrom
 
 === 0.8.2 Lustery
 
