@@ -12,6 +12,7 @@
 * Prevent admin from removing her own admin privilege [Jim Gay]
 * Move to Rails 2.3.5 [Jim Gay]
 * Simplify admin tab API [Jim Gay, John Long, Sean Cribbs]
+* Add future publishing feature [Anna Billstrom]
 
 === 0.9.0 RC1 (October 9, 2009)
 
